--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,6 @@ jobs:
     strategy:
       matrix:
         node-version: [20, 22]
-    
-    defaults:
-      run:
-        working-directory: backend
 
     steps:
       - name: Checkout repository
@@ -28,19 +24,19 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
         run: npm ci
 
       - name: Type check
-        run: npm run typecheck
+        run: npm run typecheck -w backend
 
       - name: Run tests
-        run: npm test
+        run: npm test -w backend
 
       - name: Build
-        run: npm run build
+        run: npm run build -w backend
 
   frontend:
     name: Frontend Tests
@@ -49,10 +45,6 @@ jobs:
     strategy:
       matrix:
         node-version: [20, 22]
-    
-    defaults:
-      run:
-        working-directory: frontend
 
     steps:
       - name: Checkout repository
@@ -63,16 +55,16 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
         run: npm ci
 
       - name: Type check
-        run: npm run typecheck
+        run: npm run typecheck -w frontend
 
       - name: Run tests
-        run: npm test -- --run
+        run: npm test -w frontend -- --run
 
       - name: Build
-        run: npm run build
+        run: npm run build -w frontend
